Task5/workloads.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task5-network
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
  namespace: task5-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end-app
      role: front-end
      task: task5-network
  template:
    metadata:
      labels:
        app: front-end-app
        role: front-end
        task: task5-network
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: task5-network
spec:
  selector:
    app: front-end-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api-app
  namespace: task5-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end-api-app
      role: back-end-api
      task: task5-network
  template:
    metadata:
      labels:
        app: back-end-api-app
        role: back-end-api
        task: task5-network
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api
  namespace: task5-network
spec:
  selector:
    app: back-end-api-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
  namespace: task5-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front-end-app
      role: admin-front-end
      task: task5-network
  template:
    metadata:
      labels:
        app: admin-front-end-app
        role: admin-front-end
        task: task5-network
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end
  namespace: task5-network
spec:
  selector:
    app: admin-front-end-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
  namespace: task5-network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-back-end-api-app
      role: admin-back-end-api
      task: task5-network
  template:
    metadata:
      labels:
        app: admin-back-end-api-app
        role: admin-back-end-api
        task: task5-network
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api
  namespace: task5-network
spec:
  selector:
    app: admin-back-end-api-app
  ports:
    - port: 80
      targetPort: 80
